; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/p/extr_asm_arm_gnu.c_arm_buffer_read_memory.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/p/extr_asm_arm_gnu.c_arm_buffer_read_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.disassemble_info = type { i32 }

@Offset = common dso_local global i32 0, align 4
@bytes = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32, %struct.disassemble_info*)* @arm_buffer_read_memory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arm_buffer_read_memory(i32 %0, i32* %1, i32 %2, %struct.disassemble_info* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.disassemble_info*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.disassemble_info* %3, %struct.disassemble_info** %9, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @Offset, align 4
  %13 = sub nsw i32 %11, %12
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %31

17:                                               ; preds = %4
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %8, align 4
  %20 = add i32 %18, %19
  %21 = icmp ugt i32 %20, 4
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  store i32 -1, i32* %5, align 4
  br label %31

23:                                               ; preds = %17
  %24 = load i32*, i32** %7, align 8
  %25 = load i64, i64* @bytes, align 8
  %26 = load i32, i32* %10, align 4
  %27 = sext i32 %26 to i64
  %28 = add nsw i64 %25, %27
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @memcpy(i32* %24, i64 %28, i32 %29)
  store i32 0, i32* %5, align 4
  br label %31

31:                                               ; preds = %23, %22, %16
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @memcpy(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
